<resources>
    <string name="app_name">Nirvana INNs</string>
    <string name="tx1">This is worng password</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="uid_no">UID No.</string>
    <string name="pan_no">PAN No.</string>
    <string name="dob">DOB</string>
    <string name="email_id">Email ID</string>
    <string name="id_proof">ID Proof</string>
    <string name="date">Date</string>
    <string name="book">BOOK</string>
    <string name="hint_name">Enter your Name</string>
    <string name="hint_address">Enter address</string>
    <string name="hint_uid_no">Enter your Aadhar</string>
    <string name="hint_pan_no">Enter your PAN</string>
    <string name="hint_dob">Select your BirthDate</string>
    <string name="hint_email_id">Enter your E-mail ID</string>
    <string name="browse">Browse</string>
    <string name="map_of_sardhar">Map of Sardhar</string>
    <string name="how_to_reach_sardhar">How to reach Sardhar</string>
    <string name="importatnt_timing">Importatnt Timing</string>
    <string name="aarti">Aarti:</string>
    <string name="_5_45_am">5:45 am</string>
    <string name="_7_15_am">7:15 am</string>
    <string name="_11_00_am">11:00 am</string>
    <string name="_7_00_pm">7:00 pm</string>
    <string name="_8_30_pm">8:30 pm</string>
    <string name="prasad">Prasad:</string>
    <string name="_7_00_am">7:00 am</string>
    <string name="_11_45_am">11:45 am</string>
    <string name="_7_45_pm">7:45 pm</string>
    <string name="gharsabha">GharSabha:</string>
    <string name="_9_00_pm_onwards">9:00 pm Onwards</string>
    <string name="only_after_aarti">*Only after Aarti</string>
    <string name="nirav_parmar">Nirav Parmar</string>
    <string name="darshan_rajodiya">Darshan Rajodiya</string>
    <string name="drajodiya286_rku_ac_in">drajodiya286@rku.ac.in</string>
    <string name="nparmar524_rku_ac_in">nparmar524@rku.ac.in</string>
    <string name="yash_savaliya">Yash Savaliya</string>
    <string name="ysavaliya215_rku_ac_in">ysavaliya215@rku.ac.in</string>
    <string name="shukan_memakiya">Shukan Memakiya</string>
    <string name="smemakiya372_rku_ac_in">smemakiya372@rku.ac.in</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="enter_your_mobile_no">Enter Your Mobile no.</string>
</resources>