<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contact">

    <TextView
        android:id="@+id/textView29"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="564dp"
        android:text="@string/nirav_parmar"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="174dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="522dp"
        android:text="@string/nparmar524_rku_ac_in"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="401dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="293dp"
        android:text="@string/yash_savaliya"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="445dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="251dp"
        android:text="@string/ysavaliya215_rku_ac_in"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="531dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="165dp"
        android:text="@string/shukan_memakiya"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="577dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="106dp"
        android:text="@string/smemakiya372_rku_ac_in"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="415dp"
        android:text="@string/darshan_rajodiya"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="317dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="379dp"
        android:text="@string/drajodiya286_rku_ac_in"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="642dp"
        android:text="Contact"
        android:textSize="30sp" />
</RelativeLayout>